--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".listActivity.EditListActivity"></activity>
+        <activity android:name=".listActivity.ListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CheckActivity" />
+        <activity android:name=".MyAccountActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".checkActivity.CheckActivity">
+        </activity>
         <activity android:name=".ChoosingGradeActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
