--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".listActivity.EditListActivity"></activity>
-        <activity android:name=".listActivity.ListActivity" >
+        <activity android:name=".listActivity.EditListActivity" />
+        <activity android:name=".listActivity.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +19,8 @@
         </activity>
         <activity android:name=".MyAccountActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".WelcomeActivity"></activity>
-        <activity android:name=".checkActivity.CheckActivity">
-        </activity>
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".checkActivity.CheckActivity"></activity>
         <activity android:name=".ChoosingGradeActivity" />
         <activity
             android:name=".MainActivity"
