add clock, daily and weekly report

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.experiment.learinghelper"
@@ -51,4 +51,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
