--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,36 @@
         android:theme="@style/AppTheme">
         <activity android:name=".listActivity.EditListActivity" />
         <activity android:name=".listActivity.ListActivity">
+        </activity>
+        <activity android:name=".MyAccountActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".WelcomeActivity" >
+
+        </activity>
+        <activity android:name=".checkActivity.CheckActivity" />
+        <activity android:name=".ChoosingGradeActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".countdown.EditClockActivity" />
+        <activity
+            android:name=".countdown.CountDownActivity"
+            android:theme="@style/theme1">
+        </activity>
+        <activity
+            android:name=".daily.DailyActivity"
+            android:theme="@style/theme1">
+        </activity>
+        <activity
+            android:name=".weekly.WeeklyActivity"
+            android:theme="@style/theme1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MyAccountActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".WelcomeActivity" />
-        <activity android:name=".checkActivity.CheckActivity"></activity>
-        <activity android:name=".ChoosingGradeActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
     </application>
 
 </manifest>
